Upgrade build tools number

--- a/androidboilerplate/build.gradle
+++ b/androidboilerplate/build.gradle
@@ -2,7 +2,13 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
+
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+        options.addStringOption('charSet', 'UTF-8')
+    }
 
     defaultConfig {
         minSdkVersion 15
