--- a/androidboilerplate/src/main/AndroidManifest.xml
+++ b/androidboilerplate/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
     package="com.androidboilerplate">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
